--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer>
+    <div>© 2024 Alofofmoney. Все права защищены.</div>
+    <nav>
+      <a href="#">Политика конфиденциальности</a>
+      <a href="#">Условия использования</a>
+    </nav>
+  </footer>
