--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <div class="app-container">
+     <!-- Header Section -->
     <app-header></app-header>
+      
+    <!-- Main Content Section -->
     <div class="main-content">
-      <router-outlet></router-outlet>
+        <router-outlet></router-outlet>
     </div>
+      
+        <!-- Footer Section -->
     <app-footer></app-footer>
-  </div>
+</div>
