--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,17 +9,65 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8);
     border-radius: 10px;
     z-index: 1000;
-  }
-  
-  .auth-modal input {
+}
+
+.auth-modal label {
+    display: block;
+    margin-bottom: 8px; /* Расстояние между меткой и полем */
+    font-weight: bold;
+}
+
+.auth-modal input {
+    width: 100%;
     background-color: #2c2c2c;
     border: 1px solid #444;
     color: #fff;
-  }
-  
-  .auth-modal button {
-    margin-top: 15px;
     padding: 10px;
+    margin-bottom: 15px; /* Расстояние между полями */
+    border-radius: 5px;
+}
+
+.auth-modal button {
+    margin-top: 20px;
+    padding: 10px 20px;
     background-color: #f8c94d;
     color: #000;
-  }
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    background-color: #f8c94d;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.auth-modal button + button {
+    margin-left: 10px; /* Расстояние между кнопками */
+}
+
+.auth-modal button:hover {
+    background-color: #c8a83a;
+    color: #fff;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 10px 20px;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    height: 60px; /* Укажите размер логотипа */
+    width: auto;
+}
+
