--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,8 @@
 <header>
   <div class="logo-container">
-    <img src= "/src/app/assets/logo.png" alt="Логотип" class="logo">
+    <img src="/src/app/assets/logo.png" alt="Логотип" class="logo">
   </div>
   <nav>
-    <a (click)="toggleAuthForm()">Личный кабинет</a>
+    <a (click)="openAuthModal()">Личный кабинет</a>
   </nav>
 </header>
-
-  <div *ngIf="showAuthForm" class="auth-modal">
-    <form [formGroup]="authForm" (ngSubmit)="onLogin()">
-      <h3>Авторизация</h3>
-      <label for="username">Логин:</label>
-      <input id="username" formControlName="username" />
-      <div *ngIf="authForm.get('username')?.invalid && authForm.get('username')?.touched">
-        <small *ngIf="authForm.get('username')?.errors?.['required']">Логин обязателен</small>
-      </div>
-  
-      <label for="password">Пароль:</label>
-      <input id="password" type="password" formControlName="password" />
-      <div *ngIf="authForm.get('password')?.invalid && authForm.get('password')?.touched">
-        <small *ngIf="authForm.get('password')?.errors?.['required']">Пароль обязателен</small>
-      </div>
-  
-      <button type="submit" [disabled]="authForm.invalid">Войти</button>
-      <button type="button" (click)="toggleAuthForm()">Отмена</button>
-    </form>
-  </div>
