--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,15 +2,25 @@
   <h1>Добро пожаловать в личный кабинет!</h1>
   <p>Здесь будет отображаться информация о пользователе.</p>
 
-  <!-- Кнопка авторизации -->
+  <!-- Кнопка для авторизации -->
   <button (click)="onLoginClick()" [disabled]="isLoading">Авторизоваться</button>
 
-  <!-- Сообщения об ошибках и успехе -->
+  <!-- Сообщения об ошибках и успехах -->
   <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
 
-  <!-- Отображаем токен при успешной авторизации -->
-  <div *ngIf="token" style="margin-top: 20px; color: white;">
-    <p>Ваш токен: {{ token }}</p>
+  <!-- Если токен есть, показываем кнопку получить барберов -->
+  <div *ngIf="token" style="margin-top: 20px;">
+    <button (click)="onGetBarbersClick()" [disabled]="isLoading">Посмотреть всех наших барберов</button>
+  </div>
+
+  <!-- Отображаем список барберов, если они есть -->
+  <div *ngIf="barbers.length > 0" style="margin-top: 20px;">
+    <h2>Список барберов:</h2>
+    <ul>
+      <li *ngFor="let barber of barbers">
+        {{ barber.name }} (Опыт: {{ barber.experienceLevel }})
+      </li>
+    </ul>
   </div>
 </div>
