текст в начальной странице

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,15 @@
-<p>main works!</p>
+<div class="dashboard">
+    <h1>Добро пожаловать в наш барбершоп!</h1>
+    <p>
+      Мы — команда профессиональных барберов, готовых преобразить ваш образ и подчеркнуть индивидуальность.
+      Наша миссия — создавать стильные и удобные стрижки, соответствующие вашим пожеланиям.
+    </p>
+    <p>
+      У нас вы найдёте не только классические и современные варианты стрижек, но и атмосферу уюта и профессионализма.
+      Каждый клиент для нас важен, и мы стремимся обеспечить максимально комфортный сервис.
+    </p>
+    <p>
+      Наша команда регулярно совершенствует навыки и следит за трендами в мире мужских стрижек,
+      чтобы предложить вам лучший результат. Приходите и убедитесь сами!
+    </p>
+  </div>
